// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text library components renders correctly formatted text 1`] = `
"<Text style={{...}}>
  100.133
</Text>"
`;

exports[`text library components renders correctly regular text 1`] = `
"<Text style={{...}}>
  dummy
</Text>"
`;

exports[`text library components renders correctly small text 1`] = `
"<Text style={{...}}>
  test
</Text>"
`;

exports[`text library components renders correctly text with multiple styles 1`] = `
"<Text style={{...}}>
  test
</Text>"
`;

exports[`text library components renders correctly text with style provided via prop 1`] = `
"<Text style={{...}}>
  test
</Text>"
`;
